Adicionado arquivos da biblioteca

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,23 @@ typings/
 .env
 .env.test
 
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
